syntax = "proto3";

package go_proto;

import "pagination.proto";

option go_package="/pb";

message Products {
  Pagination pagination=1;
  repeated Product data=2;
}

message Product {
  uint64 id = 1;
  string name = 2;
  double price = 3; // double or float
  uint64 stock = 4;
  ProductCategory productCategory = 5;
}

message ProductCategory {
  uint64 id = 1;
  string name = 2;
}